# ai-playground

./: .gitignore
demo-01/: demo-01.py
demo-02/: demo.py
demo-graphy/: index.py
demo-hacknew/: README.md  index.py  quick_start.py  tools.py
demo-memory/: 01_buffer_memory.py  02_window_memory.py  03_summary_memory.py  04_summary_buffer_memory.py  README.md
demo-message/: index.py
demo-tool/: getBalanceSheet.py  index.py  read.py  storeAllData.py  szse_stock.json
financial/: .gitignore  cookie.json  download_pdf.py  download_pdf_playwright.py  index.py  index_full.py  main.py  pyproject.toml  requirements.txt  run_browser.py  test.py  环境配置说明.md
financial-statements/: README.md  README_配置说明.md  example.py  index.py  test_api.py  中文PDF优化说明.md  使用说明.md  快速开始.md  问题分析_递归限制.md
financial/ai/: analyse_pdf.py  index.py
financial/crawler_website/: beijing.py  run_browser.py  shanghai.py  shengzhen.py
financial/db/: index.py  save_campany_info.py  save_company_info.py  search_SQL.py
financial/download_pdf/: auth_download.py  cookie.json  download_pdf.py
hackernews/: README.md  README_MEMORY.md  example.py  index.py
stock_selected/: get_store_list.py
